product serial implement

--- a/src/app/core/components/edit-product/edit-product.component.html
+++ b/src/app/core/components/edit-product/edit-product.component.html
@@ -12,6 +12,23 @@
       (ngSubmit)="onFormSubmit()"
       class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4"
     >
+    <div class="mb-4">
+      <label
+        class="block text-gray-700 text-sm font-bold mb-2"
+        for="productSl"
+      >
+        Product Serial <span class="text-red-600">*</span>
+      </label>
+      <input
+        class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+        id="productSl"
+        name="productSl"
+        type="text"
+        placeholder="Enter Product Serial"
+        [(ngModel)]="productInfo.productSl"
+        required
+      />
+    </div>
       <div class="mb-4">
         <label
           class="block text-gray-700 text-sm font-bold mb-2"
