--- a/src/app/core/components/product-list/product-list.component.html
+++ b/src/app/core/components/product-list/product-list.component.html
@@ -32,6 +32,7 @@
             <tr
               class="text-xs font-semibold tracking-wide text-left text-gray-500 uppercase border-b dark:border-gray-700 bg-gray-50 dark:text-gray-400 dark:bg-gray-800"
             >
+              <th class="px-4 py-3">SI</th>
               <th class="px-4 py-3">Image</th>
               <th class="px-4 py-3">Name</th>
               <th class="px-4 py-3">Brand</th>
@@ -49,9 +50,10 @@
           >
             <ng-container *ngIf="products$">
               <tr
-                *ngFor="let product of products$ | async"
+                *ngFor="let product of sortProducts(products$ | async)"
                 class="bg-gray-50 dark:bg-gray-800 hover:bg-gray-100 dark:hover:bg-gray-900 text-gray-700 dark:text-gray-400"
               >
+                <td class="px-4 py-3 text-xs">{{ product.productSl }}</td>
                 <td class="px-4 py-3">
                   <img
                     [src]="
