our product sort fixed and bannar picture change

--- a/src/app/core/components/hero/hero.component.html
+++ b/src/app/core/components/hero/hero.component.html
@@ -2,7 +2,7 @@
   <div class="hero-content flex-col lg:flex-row w-[100vw]">
     <img
       data-aos="fade-right"
-      src="../../../../assets/hematech12.jpg"
+      src="../../../../assets/hematech.jpg"
       class="md:max-w-sm rounded-lg shadow-2xl w-[80vw]"
       alt=""
     />
