--- a/src/app/core/components/our-products/our-products.component.html
+++ b/src/app/core/components/our-products/our-products.component.html
@@ -24,7 +24,7 @@
       <div
         class="grid xl:grid-cols-5 lg:grid-cols-4 md:grid-cols-3 grid-cols-1 justify-items-center gap-10"
       >
-        <div *ngFor="let product of sortProducts(products$ | async | slice : 0 : 12)">
+        <div *ngFor="let product of sortProducts(products$ | async)">
           <app-product-card [product]="product"></app-product-card>
         </div>
       </div>
