--- a/src/app/core/components/hero/hero.component.html
+++ b/src/app/core/components/hero/hero.component.html
@@ -2,14 +2,19 @@
   <div class="hero-content flex-col lg:flex-row w-[100vw]">
     <img
       data-aos="fade-right"
-      src="../../../../assets/hematech.jpg"
+      src="https://i.ibb.co.com/Mxfp4kzf/medical-solution-hero.jpg"
       class="md:max-w-sm rounded-lg shadow-2xl w-[80vw]"
       alt=""
     />
     <div data-aos="fade-left" class="lg:mr-24 lg:ml-12 mb-8">
-      <h1 class="text-5xl font-bold righteous text-primary">{{ about?.title }}</h1>
+      <h1 class="text-5xl font-bold righteous text-primary">
+        {{ about?.title }}
+      </h1>
       <p class="py-6 monospace">{{ about?.description }}</p>
-      <button routerLink="about" class="btn btn-primary rounded-none text-white px-2 md:px-5 lg:px-8 font-light lg:text-xl md:text-md text-sm btn-xs md:btn-md">
+      <button
+        routerLink="about"
+        class="btn btn-primary rounded-none text-white px-2 md:px-5 lg:px-8 font-light lg:text-xl md:text-md text-sm btn-xs md:btn-md"
+      >
         About Us
       </button>
     </div>
